--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -30,14 +30,17 @@ http {
 		index index.php;
 
         location / {
-                 try_files $uri $uri/ /index.php?$args;
+                try_files $uri $uri/ /index.php$is_args$args;
 		}
         location ~ \.php$ {
-				 include fastcgi_params;
-				 fastcgi_pass        wordpress:9000; #redirect php request to port 9000
-				 fastcgi_intercept_errors on;
-				 fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-				 access_log /var/log/nginx/phpfpmonly-access0.log;
+				try_files $uri =404;
+				include fastcgi_params;
+				fastcgi_split_path_info ^(.+\.php)(/.+)$;
+				fastcgi_index index.php;
+				fastcgi_pass        wordpress:9000; #redirect php request to port 9000
+				fastcgi_intercept_errors on;
+				fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+				access_log /var/log/nginx/phpfpmonly-access0.log;
         }
 }
 
