--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
 	server {
         listen 443 default_server ssl;
         ## Your website name goes here.
-        server_name localhost;
+        server_name loumouli.42.fr;
         ssl_certificate /etc/ssl/certs/nginx.crt;
         ssl_certificate_key /etc/ssl/private/nginx.key;
         ## Your only path reference.
