--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -4,28 +4,16 @@ events {
 
 http {
 	include /etc/nginx/mime.types;
-	##
-	# SSL Settings
-	##
-
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_prefer_server_ciphers on;
-
-	##
-	# Logging Settings
-	##
-
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
 	server {
         listen 443 default_server ssl;
-        ## Your website name goes here.
         server_name loumouli.42.fr;
         ssl_certificate /etc/ssl/certs/nginx.crt;
         ssl_certificate_key /etc/ssl/private/nginx.key;
-        ## Your only path reference.
-        ## This should be in your http block and if it is, it's not needed here.
 		root /var/www/wordpress;
 		index index.php;
 
@@ -37,7 +25,7 @@ http {
 				include fastcgi_params;
 				fastcgi_split_path_info ^(.+\.php)(/.+)$;
 				fastcgi_index index.php;
-				fastcgi_pass        wordpress:9000; #redirect php request to port 9000
+				fastcgi_pass        wordpress:9000; 
 				fastcgi_intercept_errors on;
 				fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
 				access_log /var/log/nginx/phpfpmonly-access0.log;
